applications/open-webui/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-https
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
  hostnames:
    - chat.internal.vw-ops.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: open-webui
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-redirect
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: http
  hostnames:
  - chat.internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
